--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -12,9 +12,20 @@ main {
 .header__container {
     background-color: var(--grey-1);
     padding: 1.25rem;
+    width: 100vw;
 
+    top: 0;
+    position: fixed;
+    display: flex;
+    justify-content: center;
+}
+
+.item__header {
     display: flex;
     justify-content: space-between;
+
+    width: 100%;
+    max-width: 1150px;
 }
 
 /* SECTION POST */
@@ -24,7 +35,8 @@ main {
 
     width: 713px;
     max-width: 100%;
-    margin: 3rem 0;
+
+    margin-top: 7.75rem;
     gap: 2.5rem;
 }
 
@@ -43,8 +55,16 @@ input {
     height: 52px;
 }
 
+#input__title::placeholder {
+    padding: 1.25rem;
+}
+
 #input__text {
     height: 130px;
+}
+
+#input__text::placeholder {
+    padding: 1.3125rem;
 }
 
 .input__container > button {
