--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -189,6 +189,7 @@ input {
         margin: 3rem 0;
     }
     .aside__container {
+        margin-top: 7.75rem;
         width: 350px;
         max-width: 100%;
     }
